--- a/css/editor.css
+++ b/css/editor.css
@@ -1,17 +1,25 @@
 .CodeMirror-lines {
   background-color: #011627 !important;
   color: #f8f8f2 !important;
-  border: 1px solid #d1f0e5 !important;
+  border: 1px solid #5f7e97 !important;
 }
 
-.CodeMirror-gutters {
-  background: #011627 !important;
-  border-right: 1px solid transparent !important;
-  border-bottom: 1px solid white !important;
+.command-active .CodeMirror-lines {
+  background-color: #011627 !important;
+  color: #f8f8f2 !important;
+  border: 1px solid lightgreen !important;
 }
 
-.CodeMirror-linenumber {
-  color: #d1f0e5 !important;
+.CodeMirror-cursor {
+  border-left: 1px solid #f8f8f2 !important;
+}
+
+.CodeMirror-matchingbracket {
+  background-color: #5f7e97 !important;
+}
+
+.CodeMirror-selected {
+  background-color: #5f7e97 !important;
 }
 
 span.cm-comment {
@@ -34,7 +42,7 @@ span.cm-attribute {
 
 span.cm-keyword {
   color: #c792ea !important;
-  font-weight: normal;
+  font-weight: normal !important;
 }
 span.cm-string {
   color: #ecc48d !important;
