--- a/css/cell.css
+++ b/css/cell.css
@@ -40,7 +40,7 @@ div.dataset-info-view span,
 div.dataset-info-view i,
 p.clickable-text,
 p.plotWarning {
-  color: white !important;
+  color: f8f8f2 !important;
 }
 
 /* Results */
