--- a/css/markdown.css
+++ b/css/markdown.css
@@ -1,8 +1,3 @@
-/* Rendered markdown text */
-div.markdown h2 {
-  color: #d1f0e5 !important;
-}
-
 div.markdown code {
-  color: #f78c6c;
+  color: lightpink;
 }
