--- a/css/editor.css
+++ b/css/editor.css
@@ -56,6 +56,10 @@ span.cm-variable-2 {
   color: #f8f8f2 !important;
 }
 
+span.cm-variable-3 {
+  color: #f8f8f2 !important;
+}
+
 span.cm-def {
   color: #82aaff !important;
 }
