--- a/css/cell.css
+++ b/css/cell.css
@@ -66,7 +66,7 @@ p.plotWarning {
 }
 
 .progress-bar-text {
-  color: hsla(0, 100%, 100%, 0.8) !important;
+  color: black !important;
 }
 
 /* Dataframe table */
