--- a/css/cell.css
+++ b/css/cell.css
@@ -102,5 +102,5 @@ div.command-result-stats span:nth-child(5) {
 
 /* resize icon */
 div.ui-icon-gripsmall-diagonal-se {
-  background-color: hsla(0, 100%, 100%, 0.8) !important;
+  background-color: #f5f5f5 !important;
 }
