--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,9 +1,9 @@
-/* Action bar */
+/* action bar */
 .context-bar {
   background-color: #333 !important;
 }
 
-/* Title bar */
+/* title bar */
 #topbar {
   background-color: #333 !important;
 }
