--- a/css/navbar.css
+++ b/css/navbar.css
@@ -15,3 +15,8 @@
 #topbar i.fa {
   color: hsla(0, 100%, 100%, 0.8) !important;
 }
+
+a[data-name='Restart Cluster'] {
+  pointer-events: none !important;
+  color: #dddddd !important;
+}
