--- a/css/navbar.css
+++ b/css/navbar.css
@@ -20,3 +20,39 @@ a[data-name='Restart Cluster'] {
   pointer-events: none !important;
   color: #dddddd !important;
 }
+
+.dropdown-menu {
+  background-color: #333 !important;
+}
+
+.dropdown-menu-item a,
+.dropdown-submenu a {
+  color: hsla(0, 100%, 100%, 0.8) !important;
+}
+
+#shortcut-content {
+  background-color: #333 !important;
+}
+
+.shortcut-description {
+  color: hsla(0, 100%, 100%, 0.8) !important;
+}
+
+.edit-mode-shortcuts h2,
+.command-mode-shortcuts h2 {
+  color: hsla(0, 100%, 100%, 0.8) !important;
+}
+
+.shortcut-command {
+  background-color: #333 !important;
+  color: lightpink !important;
+}
+
+.plus-sign,
+.shortcut-colon {
+  color: hsla(0, 100%, 100%, 0.8) !important;
+}
+
+p.divider {
+  display: none;
+}
