--- a/css/cell.css
+++ b/css/cell.css
@@ -33,11 +33,10 @@
 }
 
 /* Cell container */
-.mainCommand {
+div.mainCommand {
   background-color: #011627 !important;
   border: 1px solid #5f7e97 !important;
   padding-left: 3px !important;
-  border-left-width: 4px !important;
   box-shadow: none;
 }
 
@@ -112,4 +111,14 @@ input.editing-text {
 
 iframe {
   background-color: #f5f5f5 !important;
+}
+
+div.new-notebook.command.command-active,
+div.new-notebook.command.command-active:hover {
+  border: 1px solid lightgreen !important;
+}
+
+div.new-notebook.command.command-active.is-editing,
+div.new-notebook.command.command-active.is-editing:hover {
+  border: 1px solid #5f7e97 !important;
 }
