--- a/src/scss/cell.scss
+++ b/src/scss/cell.scss
@@ -1,5 +1,7 @@
+@import './variables';
+
 .ansiout {
-  color: hsla(0, 100%, 100%, 0.8) !important;
+  color: $font-color;
 }
 
 .ansired {
@@ -22,71 +24,81 @@
   color: lightcyan !important;
 }
 
-/* Buttons on the top-right corner */
+// buttons on the top-right corner
 .command-button {
-  color: #5f7e97 !important;
+  color: $line-color;
+  &:hover {
+    color: lightblue !important;
+    i.fa {
+      color: lightblue !important;
+    }
+  }
 }
 
-/* Cell number on the top-left corner */
+// cell number on the top-left corner
 .command-number {
-  color: #5f7e97 !important;
+  color: $line-color;
 }
 
-/* Cell container */
-div.mainCommand {
-  background-color: #011627 !important;
-  border: 1px solid #5f7e97 !important;
+// cell container
+.mainCommand {
+  background-color: $bg-color;
+  border: $border;
   padding-left: 3px !important;
-  box-shadow: none;
+  box-shadow: none !important;
+
+  &:hover {
+    border: 1px solid $highlight;
+  }
 }
 
 .CodeMirror-gutters {
-  background-color: #011627 !important;
+  background-color: $bg-color;
   border-right: 1px solid transparent !important;
 }
 
 .CodeMirror-linenumber {
-  color: #5f7e97 !important;
+  color: $line-color;
 }
 
-/* result area */
+// result area
 ul.jobs p,
 div.dataset-info-view span,
 div.dataset-info-view i,
 p.clickable-text,
 p.plotWarning {
-  color: hsla(0, 100%, 100%, 0.8) !important;
+  color: $font-color;
 }
 
-/* text on charts created by display */
+// text on charts created by display
 svg text {
-  fill: hsla(0, 100%, 100%, 0.8) !important;
+  fill: $font-color;
 }
 
-/* results */
+// results
 .results-and-comments {
-  background-color: #011627 !important;
-  color: hsla(0, 100%, 100%, 0.8) !important;
+  background-color: $bg-color;
+  color: $font-color;
 }
 
 .progress-bar-text {
   color: black !important;
 }
 
-/* dataframe table */
+// dataframe table
 div.widget.ui-resizable tr:hover td {
-  color: #011627;
-  background-color: hsla(0, 100%, 100%, 0.8);
+  color: $bg-color;
+  background-color: $font-color;
 }
 
-/* suggestion from Databricks */
+// suggestion from Databricks
 span.spark-advisor-header,
 span.spark-advisor-text,
 span.spark-advisor-indicator {
   color: black;
 }
 
-/* run info (when, whso, and how long it took) */
+// run info
 div.command-result-stats span:nth-child(2),
 div.command-result-stats span:nth-child(4) {
   font-size: 12px !important;
@@ -99,26 +111,26 @@ div.command-result-stats span:nth-child(5) {
   display: none !important;
 }
 
-/* resize icon */
+// resize icon
 div.ui-icon-gripsmall-diagonal-se {
   background-color: #f5f5f5 !important;
-}
-
-/* cell header */
-input.editing-text {
-  color: hsla(0, 100%, 100%, 0.8) !important;
 }
 
 iframe {
   background-color: #f5f5f5 !important;
 }
 
+/* cell header */
+input.editing-text {
+  color: $font-color;
+}
+
 div.new-notebook.command.command-active,
 div.new-notebook.command.command-active:hover {
-  border: 1px solid lightgreen !important;
+  border: $active-border;
 }
 
 div.new-notebook.command.command-active.is-editing,
 div.new-notebook.command.command-active.is-editing:hover {
-  border: 1px solid #5f7e97 !important;
+  border: $border;
 }
