--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -1,25 +1,29 @@
+@import './variables';
+
+$editor-font-color: #f8f8f2 !important;
+
 .CodeMirror-lines {
-  background-color: #011627 !important;
+  background-color: $bg-color;
   color: #f8f8f2 !important;
-  border: 1px solid #5f7e97 !important;
+  border: $border;
 }
 
 .is-editing .CodeMirror-lines {
-  background-color: #011627 !important;
-  color: #f8f8f2 !important;
-  border: 1px solid lightgreen !important;
+  background-color: $bg-color;
+  color: $editor-font-color;
+  border: $active-border;
 }
 
 .CodeMirror-cursor {
-  border-left: 1px solid #f8f8f2 !important;
+  border-left: 1px solid $editor-font-color;
 }
 
 .CodeMirror-matchingbracket {
-  background-color: #5f7e97 !important;
+  background-color: $line-color;
 }
 
 .CodeMirror-selected {
-  background-color: #5f7e97 !important;
+  background-color: $border;
 }
 
 span.cm-comment {
