--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -15,7 +15,7 @@
   background-color: #5f7e97 !important; }
 
 .CodeMirror-selected {
-  background-color: 1px solid #5f7e97 !important; }
+  background-color: #5f7e97 !important; }
 
 span.cm-comment {
   color: #637777 !important; }
