--- a/src/css/topbar.css
+++ b/src/css/topbar.css
@@ -5,6 +5,6 @@
   color: rgba(255, 255, 255, 0.8) !important; }
 
 #topbar i.fa {
-  color: #5f7e97 !important; }
+  color: rgba(255, 255, 255, 0.8) !important; }
   #topbar i.fa:hover {
     color: lightblue !important; }
