--- a/src/css/context-bar.css
+++ b/src/css/context-bar.css
@@ -8,21 +8,14 @@
 .react-select__indicator-separator {
   display: none !important; }
 
-.context-bar__left > div:hover .context-bar-link-text,
-.context-bar__left > div:hover .single-value--with-icon,
-.context-bar__left > div:hover i.fa:not(.status-indicator-icon) {
-  color: lightblue !important; }
-
-.context-bar__right > div:not(#shortcut-content) > div:hover span,
-.context-bar__right > div:not(#shortcut-content) > div:hover i.fa,
-.context-bar__right > div:not(#shortcut-content) > a:hover span,
-.context-bar__right > div:not(#shortcut-content) > a:hover i.fa {
-  color: lightblue !important; }
+.context-bar__left > div svg,
+.context-bar__left > a svg {
+  fill: rgba(255, 255, 255, 0.8) !important; }
 
 .context-bar-link-text,
 .single-value--with-icon,
 .context-bar i.fa:not(.status-indicator-icon) {
-  color: #5f7e97 !important; }
+  color: rgba(255, 255, 255, 0.8) !important; }
 
 a[data-name='Restart Cluster'] {
   pointer-events: none !important;
