--- a/src/scss/sidebar.scss
+++ b/src/scss/sidebar.scss
@@ -11,7 +11,7 @@
   color: $font-color;
 
   &:hover {
-    background-color: $hover-bg;
+    background-color: $line-color;
 
     // prevent font color from turning to gray on hover
     span,
@@ -57,13 +57,10 @@ div.dropdown {
 .ft-scroll-angle-right {
   background-color: $line-color;
   color: $bg-color;
+  border: 2px solid $line-color;
 
   &:hover {
-    background-color: $highlight;
-    i.fa-angle-left,
-    i.fa-angle-right {
-      color: $bg-color;
-    }
+    border: 2px solid $font-color;
   }
 }
 
@@ -94,46 +91,44 @@ i.fa.fa-caret-down {
 
 .sidebar-element {
   .sidebar-element-icon-inner {
-    border: $border;
+    border: 1px solid $font-color;
     i.fa {
-      color: $line-color;
+      color: $font-color;
     }
   }
   span {
-    color: $line-color;
-  }
-}
-
-.sidebar-element.selected {
-  .sidebar-element-icon-inner {
-    background-color: $highlight;
-    border: 1px solid $highlight;
-    i.fa {
-      color: $bg-color;
-    }
-  }
-  span {
-    color: $highlight;
+    color: $font-color;
   }
 }
 
 .sidebar-element:hover {
   .sidebar-element-icon-inner {
-    border: 1px solid $highlight;
+    background-color: $line-color;
+  }
+}
+
+.sidebar-element.selected {
+  .sidebar-element-icon-inner {
+    background-color: $line-color;
+    border: 1px solid $font-color;
     i.fa {
-      color: $highlight;
+      color: $font-color;
     }
   }
   span {
-    color: $highlight;
+    color: $font-color;
   }
 }
 
 .sidebar-element.selected:hover {
   .sidebar-element-icon-inner {
-    border: 1px solid lightblue !important;
+    background-color: $line-color;
+    border: 1px solid $font-color;
     i.fa {
-      color: $bg-color;
+      color: $font-color;
     }
+  }
+  span {
+    color: $font-color;
   }
 }
