add style for user-menu

--- a/src/css/history-panel.css
+++ b/src/css/history-panel.css
@@ -16,7 +16,7 @@
 
 .history-preview:hover,
 .history-preview-selected:hover {
-  background-color: #0b253a !important; }
+  background-color: #1ca0c2 !important; }
 
 .history-date-title {
   color: rgba(255, 255, 255, 0.8) !important; }
