--- a/src/css/topbar.css
+++ b/src/css/topbar.css
@@ -8,3 +8,6 @@
   color: rgba(255, 255, 255, 0.8) !important; }
   #topbar i.fa:hover {
     color: lightblue !important; }
+
+.accounts-text {
+  color: rgba(255, 255, 255, 0.8) !important; }
