--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,4 @@ $border: 1px solid $line-color;
 $active-border: 1px solid lightgreen !important;
 $hover-bg: #0b253a !important;
 $highlight: lightblue !important;
+$hover: #1ca0c2 !important;
