--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,11 @@
-$bg-color: #011627 !important;
-$line-color: #5f7e97 !important;
-$font-color: hsla(0, 100%, 100%, 0.8) !important;
-$border: 1px solid $line-color;
-$active-border: 1px solid lightgreen !important;
-$hover-bg: #0b253a !important;
+$bg-main: #011627 !important;
+$bg-sub: #0b253a !important;
+$line-main: #5f7e97 !important;
 $highlight: lightblue !important;
-$hover: #1ca0c2 !important;
+$font-main: hsla(0, 100%, 100%, 0.8) !important;
+$border: 1px solid $line-main;
+$border-highlight: 1px solid $highlight;
+$active-border: 1px solid lightgreen !important;
+$hover-dropdown: #1ca0c2 !important;
+$editor-font: #f8f8f2 !important;
+$none: none !important;
