--- a/src/css/cell.css
+++ b/src/css/cell.css
@@ -1,28 +1,3 @@
-.ansiout {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.ansired {
-  color: lightcoral !important; }
-
-.ansiblue {
-  color: lightskyblue !important; }
-
-.ansigreen {
-  color: lightgreen !important; }
-
-.ansiyellow {
-  color: lightyellow !important; }
-
-.ansicyan {
-  color: lightcyan !important; }
-
-.command-button {
-  color: #5f7e97 !important; }
-  .command-button:hover {
-    color: lightblue !important; }
-    .command-button:hover i.fa {
-      color: lightblue !important; }
-
 .command-number {
   color: #5f7e97 !important; }
 
@@ -33,64 +8,68 @@
   box-shadow: none !important; }
   .mainCommand:hover {
     border: 1px solid lightblue !important; }
+  .mainCommand .ansiout {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand .ansired {
+    color: lightcoral !important; }
+  .mainCommand .ansiblue {
+    color: lightskyblue !important; }
+  .mainCommand .ansigreen {
+    color: lightgreen !important; }
+  .mainCommand .ansiyellow {
+    color: lightyellow !important; }
+  .mainCommand .ansicyan {
+    color: lightcyan !important; }
+  .mainCommand .command-button {
+    color: #5f7e97 !important; }
+    .mainCommand .command-button:hover {
+      color: lightblue !important; }
+      .mainCommand .command-button:hover i.fa {
+        color: lightblue !important; }
+  .mainCommand .CodeMirror-gutters {
+    background-color: #011627 !important;
+    border-right: 1px solid transparent !important; }
+  .mainCommand .CodeMirror-linenumber {
+    color: #5f7e97 !important; }
+  .mainCommand ul.jobs p,
+  .mainCommand div.dataset-info-view span,
+  .mainCommand div.dataset-info-view i,
+  .mainCommand p.clickable-text,
+  .mainCommand p.plotWarning {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand .results-and-comments {
+    background-color: #011627 !important;
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand .progress-bar-text {
+    color: black !important; }
+  .mainCommand div.widget.ui-resizable tr:hover td {
+    color: #011627 !important;
+    background-color: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand span.spark-advisor-header,
+  .mainCommand span.spark-advisor-text,
+  .mainCommand span.spark-advisor-indicator {
+    color: black; }
+  .mainCommand div.command-result-stats span {
+    font-size: 12px !important;
+    color: lightblue !important; }
+  .mainCommand div.ui-icon-gripsmall-diagonal-se {
+    background-color: #f5f5f5 !important; }
+  .mainCommand input.editing-text {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand svg text {
+    fill: rgba(255, 255, 255, 0.8) !important; }
+  .mainCommand iframe {
+    background-color: #f5f5f5 !important; }
+  .mainCommand.new-notebook.command.command-active, .mainCommand.new-notebook.command.command-active:hover {
+    border: 1px solid lightgreen !important; }
+  .mainCommand.new-notebook.command.command-active.is-editing, .mainCommand.new-notebook.command.command-active.is-editing:hover {
+    border: 1px solid #5f7e97 !important; }
+  .mainCommand.is-editing .CodeMirror-lines {
+    border: 1px solid lightgreen !important; }
 
-.CodeMirror-gutters {
+.btn-circle {
   background-color: #011627 !important;
-  border-right: 1px solid transparent !important; }
-
-.CodeMirror-linenumber {
-  color: #5f7e97 !important; }
-
-ul.jobs p,
-div.dataset-info-view span,
-div.dataset-info-view i,
-p.clickable-text,
-p.plotWarning {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-svg text {
-  fill: rgba(255, 255, 255, 0.8) !important; }
-
-.results-and-comments {
-  background-color: #011627 !important;
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.progress-bar-text {
-  color: black !important; }
-
-div.widget.ui-resizable tr:hover td {
-  color: #011627 !important;
-  background-color: rgba(255, 255, 255, 0.8) !important; }
-
-span.spark-advisor-header,
-span.spark-advisor-text,
-span.spark-advisor-indicator {
-  color: black; }
-
-div.command-result-stats span:nth-child(2),
-div.command-result-stats span:nth-child(4) {
-  font-size: 12px !important;
-  color: lightblue !important; }
-
-div.command-result-stats span:nth-child(1),
-div.command-result-stats span:nth-child(3),
-div.command-result-stats span:nth-child(5) {
-  display: none !important; }
-
-div.ui-icon-gripsmall-diagonal-se {
-  background-color: #f5f5f5 !important; }
-
-iframe {
-  background-color: #f5f5f5 !important; }
-
-/* cell header */
-input.editing-text {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-div.new-notebook.command.command-active,
-div.new-notebook.command.command-active:hover {
-  border: 1px solid lightgreen !important; }
-
-div.new-notebook.command.command-active.is-editing,
-div.new-notebook.command.command-active.is-editing:hover {
-  border: 1px solid #5f7e97 !important; }
+  border: 1px solid lightblue !important;
+  opacity: 1 !important; }
+  .btn-circle i.fa {
+    color: lightblue !important; }
