--- a/src/css/context-bar.css
+++ b/src/css/context-bar.css
@@ -1,50 +1,31 @@
 .context-bar {
   background-color: #011627 !important;
   border-bottom: none !important; }
-
-.attach-cluster-select-wrapper {
-  border: 1px solid #5f7e97 !important; }
-
-.react-select__indicator-separator {
-  display: none !important; }
-
-.context-bar__left > div svg,
-.context-bar__left > a svg {
-  fill: rgba(255, 255, 255, 0.8) !important; }
-
-.context-bar-link-text,
-.single-value--with-icon,
-.context-bar i.fa:not(.status-indicator-icon) {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-a[data-name='Restart Cluster'] {
-  pointer-events: none !important;
-  color: #dddddd !important; }
-
-.dropdown-menu {
-  background-color: #0b253a !important; }
-
-#shortcut-content {
-  background-color: #0b253a !important; }
-
-.dropdown-menu-item a,
-.dropdown-submenu a {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.shortcut-description {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.edit-mode-shortcuts h2,
-.command-mode-shortcuts h2 {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-.shortcut-command {
-  background-color: #0b253a !important;
-  color: lightskyblue !important; }
-
-.plus-sign,
-.shortcut-colon {
-  color: rgba(255, 255, 255, 0.8) !important; }
-
-p.divider {
-  display: none; }
+  .context-bar .context-bar__left > div svg,
+  .context-bar .context-bar__left > a svg {
+    fill: rgba(255, 255, 255, 0.8) !important; }
+  .context-bar .context-bar-link-text,
+  .context-bar .single-value--with-icon,
+  .context-bar i.fa:not(.status-indicator-icon) {
+    color: rgba(255, 255, 255, 0.8) !important; }
+  .context-bar .attach-cluster-select-wrapper {
+    border: 1px solid #5f7e97 !important; }
+  .context-bar .react-select__indicator-separator {
+    display: none !important; }
+  .context-bar a[data-name='Restart Cluster'] {
+    pointer-events: none !important;
+    color: #dddddd !important; }
+  .context-bar .dropdown-menu {
+    background-color: #0b253a !important; }
+  .context-bar .dropdown-menu-item a,
+  .context-bar .dropdown-submenu a {
+    color: rgba(255, 255, 255, 0.8) !important;
+    background-image: none !important; }
+    .context-bar .dropdown-menu-item a:hover,
+    .context-bar .dropdown-submenu a:hover {
+      background-color: #1ca0c2 !important; }
+  .context-bar .dropdown-submenu:hover > a {
+    background-image: none !important;
+    background-color: #1ca0c2 !important; }
+  .context-bar p.divider {
+    display: none !important; }
